ignore .cache in git

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Plancheck/PlanCheck_Beta_0006_0177.esapi.dll
+*.cache
+*.lref
+*.resources
