--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_0008_0025.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_Beta_0009_0000.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -178,15 +178,17 @@
     <Compile Include="Checks\Check_CT.cs" />
     <Compile Include="Checks\Check_Course.cs" />
     <Compile Include="Comparator\Result_Status.cs" />
-    <Compile Include="CustomInsertDocumentsParameter.cs" />
+    <Compile Include="createWordPrefilledCheckList\wordPrefilledCheckList.cs" />
+    <Compile Include="gateway\CustomInsertDocumentsParameter.cs" />
     <Compile Include="Documents\DocSettings.cs" />
     <Compile Include="Excel_reader\DOStructure.cs" />
     <Compile Include="Excel_reader\expectedStructure.cs" />
     <Compile Include="Excel_reader\read_check_protocole.cs" />
     <Compile Include="Excel_reader\NTO.cs" />
-    <Compile Include="Gateway.cs" />
+    <Compile Include="gateway\Gateway.cs" />
     <Compile Include="pdfReader\tomoReportData.cs" />
     <Compile Include="pdfReader\TomotherapyPdfReportReader.cs" />
+    <Compile Include="pdfreport\createPDFreport.cs" />
     <Compile Include="Preliminary_Info\OARvolume.cs" />
     <Compile Include="timer\timer.cs" />
     <Compile Include="Users\IUCT_Users.cs" />
@@ -263,5 +265,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
