--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_0010_0006.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_Beta_0010_0017.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -178,6 +178,7 @@
     <Compile Include="Checks\Check_CT.cs" />
     <Compile Include="Checks\Check_Course.cs" />
     <Compile Include="Comparator\Result_Status.cs" />
+    <Compile Include="createWordPrefilledCheckList\AriaSender.cs" />
     <Compile Include="createWordPrefilledCheckList\wordPrefilledCheckList.cs" />
     <Compile Include="gateway\CustomInsertDocumentsParameter.cs" />
     <Compile Include="Documents\DocSettings.cs" />
