--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_0010_0068.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_Beta_0011_0000.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -166,6 +166,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checks\Check_previous_Treatment.cs" />
     <Compile Include="Checks\Check_Uncheck_Test.cs" />
     <Compile Include="Checks\Check_Plan.cs" />
     <Compile Include="Checks\Check_finalisation.cs" />
