--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_0019_0001.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_Beta_0019_0039.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -225,6 +225,7 @@
     <Compile Include="pdfreport\createPDFreport.cs" />
     <Compile Include="Preliminary_Info\OARvolume.cs" />
     <Compile Include="timer\timer.cs" />
+    <Compile Include="Users\User_preferences.cs" />
     <Compile Include="Users\IUCT_Users.cs" />
     <Compile Include="Users\IUCT_User.cs" />
     <Compile Include="xaml_datas\CheckScreen_Global.xaml.cs">
@@ -236,6 +237,9 @@
     <Compile Include="Checks\Check_Model.cs" />
     <Compile Include="Comparator\Comparator.cs" />
     <Compile Include="Comparator\Item_Result.cs" />
+    <Compile Include="xaml_datas\chooseUserPreferences.xaml.cs">
+      <DependentUpon>chooseUserPreferences.xaml</DependentUpon>
+    </Compile>
     <Compile Include="xaml_datas\chooseSEA.xaml.cs">
       <DependentUpon>chooseSEA.xaml</DependentUpon>
     </Compile>
@@ -256,6 +260,10 @@
     <Page Include="xaml_datas\CheckScreen_Item.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="xaml_datas\chooseUserPreferences.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="xaml_datas\chooseSEA.xaml">
       <Generator>MSBuild:Compile</Generator>
