--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_0019_0091.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_0019_0107.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
